# network_pokemon

./: .gitignore  CMakeLists.txt  CMakePresets.json  Doxyfile  LICENSE  README.md  default.nix  execute.py  vcpkg-configuration.json  vcpkg.json
.github/workflows/: doc.yml
Ui/: CMakeLists.txt
Ui/NetworkPokemon/: CMakeLists.txt  Main.qml  Property List.plist  TestWrapper.h  main.cpp  pch.h
Ui/NetworkPokemon/Media.xcassets/icon-120.imageset/: Contents.json
Ui/NetworkPokemon/Media.xcassets/icon-60.imageset/: Contents.json
Ui/NetworkPokemon/ios/: Info.plist  Info.plist1  Launch Screen.storyboard  NetworkPokemon.entitlements
Ui/NetworkPokemon/ios/Assets.xcassets/AppIcon.appiconset/: Contents.json
Ui/NetworkPokemon/src/: main.cpp
data/peer_1/: node_infos.json  node_list.json  pokemons_images.json
data/peer_17/: nodes.txt  pokemons.txt
data/peer_2/: node_infos.json  node_list.json
data/peer_20/: nodes.txt
data/peer_25/: pokemons.txt
data/peer_26/: nodes.txt
data/peer_31/: node_infos.json  node_list.json  nodes.txt  pokemons_images.json
data/peer_4/: pokemons.txt
data/peer_6/: nodes.txt
data/peer_7/: nodes.txt
exemple/: CMakeLists.txt  execute.py  main.cpp
exemple/Téléchargements/: dusclops.
exemple/data/peer_1/: nodes2.txt
exemple/data/peer_10/: pokemons.txt
exemple/data/peer_100/: nodes.txt  pokemons.txt
exemple/data/peer_101/: nodes.txt
exemple/data/peer_11/: nodes.txt  pokemons.txt
exemple/data/peer_12/: pokemons.txt
exemple/data/peer_13/: nodes.txt
exemple/data/peer_14/: nodes.txt  pokemons.txt
exemple/data/peer_15/: nodes.txt  pokemons.txt
exemple/data/peer_16/: nodes.txt  pokemons.txt
exemple/data/peer_19/: nodes.txt  pokemons.txt
exemple/data/peer_2/: nodes.txt  pokemons.txt
exemple/data/peer_20/: pokemons.txt
exemple/data/peer_21/: nodes.txt  pokemons.txt
exemple/data/peer_22/: nodes.txt  pokemons.txt
exemple/data/peer_23/: nodes.txt  pokemons.txt
exemple/data/peer_24/: nodes.txt  pokemons.txt
exemple/data/peer_25/: nodes.txt
exemple/data/peer_26/: pokemons.txt
exemple/data/peer_27/: nodes.txt  pokemons.txt
exemple/data/peer_28/: nodes.txt
exemple/data/peer_29/: nodes.txt  pokemons.txt
exemple/data/peer_3/: nodes.txt  pokemons.txt
exemple/data/peer_30/: nodes.txt  pokemons.txt
exemple/data/peer_31/: pokemons.txt
exemple/data/peer_4/: nodes.txt
exemple/data/peer_5/: nodes.txt  pokemons.txt
exemple/data/peer_6/: pokemons.txt
exemple/data/peer_7/: pokemons.txt
exemple/data/peer_8/: nodes.txt  pokemons.txt
include/: config.h  models.hpp  networkPokemon.h  sockpp.hpp  storage.hpp
include/models/: export.hpp  image.hpp  image_cache.hpp  model.hpp  model_concepts.hpp  node_infos.hpp  utils.hpp
include/networkPokemon/: INetworkCommand.hpp  add_new_node_command.hpp  alive_command.hpp  client.hpp  command_dispatcher.h  const.hpp  export.h  export.hpp  helper.hpp  image_data_command.hpp  image_repository.hpp  ip_command.hpp  listen.hpp  main.hpp  mainpage.hpp  modbus_master.h  networkNode.hpp  node.hpp  pch.h  peer_registry.hpp  pictures_command.hpp  resourceManager.hpp  server.hpp  session.hpp  test.hpp  thread_pool.hpp  trace.hpp  utils.hpp
include/networkPokemon/command/: INetworkCommand.hpp  add_new_node_command.hpp  ip_command.hpp  ip_test.hpp
include/sockpp/: client_net_helper.hpp  consts.hpp  export.hpp  i_connection.hpp  i_networkContext.hpp  poke_net.hpp  sockpp_server.hpp  tcp_acceptor.hpp
include/sockpp/command/: INetworkCommand.hpp  command_dispatcher.hpp  (+1 more)
include/storage/: export.hpp  storage_manager.hpp
src/: CMakeLists.txt  main.cpp
src/NetworkPokemonUI/: AppHeader.qml  Backend.cpp  Backend.h  CMakeLists.txt  Info.plist.in  Main.qml  NavBar.qml  peermodel.cpp  peermodel.h
src/NetworkPokemonUI/components/: ConfigInput.qml  ConfigSwitch.qml  PokemonDelegate.qml  SettingsPopup.qml
src/NetworkPokemonUI/pages/: GalleryPage.qml  PeersPage.qml  ProfilePage.qml
src/console/: CMakeLists.txt  main.cpp
src/console/data/peer_10/: nodes.txt
src/console/data/peer_12/: nodes.txt
src/console/data/peer_13/: pokemons.txt
src/console/data/peer_18/: nodes.txt  pokemons.txt
src/console/data/peer_28/: pokemons.txt
src/console/data/peer_31/: nodes.txt
src/console/data/peer_9/: nodes.txt  pokemons.txt
src/cpp/: client.cpp  helper.cpp  listen.cpp  main.cpp  node.cpp  resourceManager.cpp  server.cpp  trace.cpp
src/hpp/: client.hpp  const.hpp  helper.hpp  listen.hpp  main.hpp  mainpage.hpp  node.hpp  resourceManager.hpp  server.hpp  trace.hpp
src/models/: CMakeLists.txt  image.cpp  image_cache.cpp  model.cpp  node_info.cpp  pch.h  utils.cpp
src/networkPokemon/: CMakeLists.txt  add_new_node_command.cpp  alive_command.cpp  client.cpp  command_dispatcher.cpp  helper.cpp  image_data_command.cpp  image_repository.cpp  ip_command.cpp  json.cpp  json.hpp  listen.cpp  main.cpp  modbus_master.cpp  networkNode.cpp  network_helper.hpp  network_helper.inl  node.cpp  pch.h  peer_registry.cpp  pictures_command.cpp  resourceManager.cpp  server.cpp  session.cpp  test.cpp  thread_pool.cpp  trace.cpp  utils.cpp
src/networkPokemon/command/: add_new_node_command.cpp  command_dispatcher.cpp  ip_command.cpp
src/sockpp/: CMakeLists.txt  client_net_helper.cpp  pch.h  poke_net.cpp  poke_net.impl.cpp  poke_net.impl.hpp  sockpp_connection.hpp  tcp_acceptor.cpp  tcp_acceptor.impl.cpp  tcp_acceptor.impl.hpp
src/sockpp/command/: command_dispatcher.cpp  ip_command.cpp
src/storage/: CMakeLists.txt  json.cpp  json.hpp  json_serializers.hpp  pch.h  storage_manager.cpp
tests/: CMakeLists.txt
tests/networkPokemon/: CMakeLists.txt  main.test.cpp  modbus_master.test.cpp
ui/: CMakeLists.txt
ui/NetworkPokemonUi/: Backend.cpp  Backend.h  CMakeLists.txt  Info.plist.in  main.cpp  node.cpp  node.h  peermodel.cpp  peermodel.h  pokemonmodel.cpp  pokemonmodel.h  tmp.txt
ui/NetworkPokemonUi/Data/: PokemonModel.qml
ui/NetworkPokemonUi/components/: ActionButton.qml  PokemonDelegate.qml  StatCard.qml
ui/NetworkPokemonUi/pages/: GalleryPage.qml  PeersPage.qml  ProfilePage.qml  SearchPage.qml
